quiz.css
:root {
    --default-f-clr: white;
    --primary-bg-clr: #474F7A;
    --secondary-bg-clr: #000d34;
    --accent-clr: #FC6736;
}

body {
    font-size: clamp(1rem, 1rem + 0.15vw, 1.3rem);
    color: var(--default-f-clr);
}

header{
    font-size: clamp(1rem, 1rem + 0.5vw ,2rem);
    color: black;
    text-align: center;
}

h2 {
    font-size: clamp(1rem, 1.5rem + 0.5vw, 2rem);
}

.question-num {
    width: 40vw;
    border-bottom: 3px solid var(--accent-clr);
}

.outer-container{
    background-color: var(--primary-bg-clr);
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.quiz-container{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;

    /* Create inner box and curve the edges*/
    /*width: 80vw;*/
    /*height: 75vh;*/
    width:80%;
    height: 75%;
    border-radius: 10px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
    background-color: var(--secondary-bg-clr);
}

.question-text {
    padding: 2rem;
}

.answers-button {
    display: flex;
    flex-direction: column;
}

.a-btns {
    width: 50vw;
    text-align: left;
    border-radius: 8px;
    margin: 0.8rem 0; /* Spacing between buttons vertically */
    padding: 1.5rem; /* top/bot and left and right */
}

.a-btns:hover {
    color: var(--default-f-clr);
    background-color: var(--accent-clr);
}

/*.button-container{*/
/*    !*display: flex;*!*/
/*    !*flex-direction: row;*!*/
/*    !*justify-content: space-evenly;*!*/
/*}*/

.s-btn {
    width: 30vw;
    border-radius: 8px;
    margin-top: 1rem;
    padding: 0.5rem;
    margin-bottom: 1rem;
}

.s-btn:hover {
    color: var(--default-f-clr);
    background-color: var(--accent-clr);
}
.question-container{
    display: flex;
    text-align: center;
    /*justify-content: center;*/
    align-items: center;

}

.score{}

